# projectBiomedicIADemonstrationsBackend

./: .gitignore  docker-compose.yaml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
app/: main.py
app/api/: api.py
app/api/endpoints/v1/: __init__.py  blood_serum.py  chromosomes.py  hematological_slides.py  ki67.py  melanoma.py  root.py  sperm.py
app/core/controllers/: blood_serum_controllers.py  chromosomes_controllers.py  hematological_slides_controllers.py  ki67_controllers.py  melanoma_controllers.py  processed_images_controllers.py  sperm_controllers.py
app/core/database/: _basic_fields_models.py
app/core/dependencies/: images.py  ml_models_loader.py
app/core/machine_learning/ia_models/: loader_ml_models.py  ml_models_path_structure.py
app/core/machine_learning/results_handler/: results_handler.py
app/core/metadata/: metadata.py
app/core/models/: __init__.py  processed_images.py  processed_images_model.py
app/core/schemas/: image_schemas.py  root_schemas.py
app/utils/dates/: date_handler.py
app/utils/images_handler/: images_handler.py
configuration/: configs.py  settings.toml
docker/: Dockerfile.api
docs/: README.md
migrations/: env.py
migrations/versions/: a2e4e833609e_.py  bf21132e87b0_.py
tests/: conftest.py  test_1a_root.py
